--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div id="target" data-testid="colorBox"></div>
         <div id="popupMessage"></div>
-        <div id="boxes">
+        <div id="boxes" data-testid="colorOption">
         </div>
         <button id="new_game" data-testid="newGameButton">New game</button>
       </section>
